--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ yarn-error.log*
 next-env.d.ts
 
 # Ignorer les vidéos locales
-/public
+/public/videos
+/public/videos/*
 
 # Mes notes
 notes.txt
